--- a/DZ1/Homework1/UI_1/UI_1.csproj
+++ b/DZ1/Homework1/UI_1/UI_1.csproj
@@ -5,4 +5,8 @@
     <TargetFramework>netcoreapp3.1</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\classLibrary\classLibrary.csproj" />
+  </ItemGroup>
+
 </Project>
